# rust-study

./: .gitignore  README.md
01-start-application/src/: main.rs
exercies/apis/hello-rocket/src/: main.rs
exercies/bank/: Cargo.toml  readme.md
exercies/bank/src/: main.rs
exercies/bank/src/bank/: account.rs  automated_teller_machine.rs  mod.rs
exercies/nemo-cli/: Cargo.toml  tmp.js
exercies/nemo-cli/src/: main.rs
exercies/strings/: Cargo.toml
exercies/strings/src/: main.rs
exercies/strings/src/reverse_string/: mod.rs
start_level/cli/: Cargo.toml  out.json
start_level/cli/src/: main.rs
start_level/loops/: Cargo.toml
start_level/loops/src/: main.rs
start_level/start-application/: Cargo.toml
start_level/start-application/src/: main.rs
start_level/types/src/: main.rs
start_level/types/src/client/: mod.rs
start_level/types_data/: Cargo.toml
