[package]
name = "nemo-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
clap = { version = "4.4.11", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
serde_json = "1.0.108"
reqwest = "0.11.23"
